--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <body>
     <div class="layout">
       <div class="bg-[color:var(--clr-primary)] text-white h-hero">
-        <div class="flex justify-between items-center"><img src="https://fakeimg.pl/100x100/fff/fff/" alt="logo" class="rounded-full p-4"><nav class="nav" role="navigation">
+        <div class="flex justify-between items-center"><img src="https://res.cloudinary.com/drwz8ea7q/image/upload/v1638200962/ROTA/1.png" alt="logo" class="rounded-full p-4" style="object-fit: contain;"><nav class="nav" role="navigation">
             <ul class="grid grid-flow-col gap-3 uppercase pr-4">
               <li>nosotros</li>
               <li>servicio</li>
@@ -39,7 +39,8 @@
           </div>
         </div>
       </div>
-      <div class="container img-lg"></div>
+      <img src="
+https://res.cloudinary.com/drwz8ea7q/image/upload/v1637600973/ROTA/2.png" class="container">
       <div class="grid container gap-y-10">
         <div class="w-1/2 ml-auto font-sans">
           <h3 class="titulo">Recolección de basura</h3>
@@ -59,7 +60,7 @@
           <span class="text-7xl">03</span>
           <h2 class="text-2xl uppercase">Máquina</h2>
         </div>
-        <div class="grid grid-cols-2 gap-3"><img src="https://via.placeholder.com/400x400" class="mx-auto border" alt="placeholder"><p class="max-w-[80%]">ROTA propone una nueva tecnología que surge a partir del problema de los vertederos. Esta máquina toma enormes montones de basura y permite procesar los residuos dependiendo su material como plásticos, papel, vidrio, metales, tela, y los tritura permitiendo una segunda vida.</p>
+        <div class="grid grid-cols-2 gap-3"><img src="https://res.cloudinary.com/drwz8ea7q/image/upload/v1637601069/ROTA/3.png" class="mx-auto" alt="placeholder"><p class="max-w-[80%]">ROTA propone una nueva tecnología que surge a partir del problema de los vertederos. Esta máquina toma enormes montones de basura y permite procesar los residuos dependiendo su material como plásticos, papel, vidrio, metales, tela, y los tritura permitiendo una segunda vida.</p>
         </div>
       </div>
       <div class="grid container py-16">
@@ -71,21 +72,21 @@
           <div>
             <p class="max-w-[80%] ml-auto">En México, los tiraderos clandestinos son un problema primario. De cada 100 sitios para la disposición de los residuos, alrededor de 66 son tiraderos a cielo abierto sin ningún control ambiental.</p>
             <p class="max-w-[80%] ml-auto pt-8">En la CDMX viven 8 millones de habitantes y según el INEGI, desechan 1.46 kilogramos de basura por día, dando un total de 20 mil toneladas de basura acumuladas cada día.</p>
-          </div><img src="https://via.placeholder.com/400x400" class="mx-auto border" alt="placeholder"></div>
+          </div><img src="https://res.cloudinary.com/drwz8ea7q/image/upload/v1637601088/ROTA/4.png" class="mx-auto" alt="placeholder"></div>
       </div>
       <div class="grid container py-16">
         <div class="flex items-center gap-4 py-5 my-6 max-w-max">
           <span class="text-7xl">05</span>
           <h2 class="text-2xl uppercase">Unete a la causa</h2>
         </div>
-        <div class="grid grid-cols-2 gap-3">
+        <div class="grid grid-cols-2 gap-3 font-sans">
           <div>
             <p class="max-w-[80%] ml-auto">La maquinaria de ROTA está diseñada para lograr el máximo resultado a partir de una estrategia personalizada para el sitio.</p>
             <p class="max-w-[80%] ml-auto pt-8">Nuestra filosofía es usar la tecnología como medio para lograr un México más limpio. El fin último es lograr una economía circular por medio del aprovechamiento de la basura como materia prima.</p>
           </div>
           <div></div>
         </div>
-        <div class="placeholder w-[800px] h-[450px]"></div>
+        <img src="https://res.cloudinary.com/drwz8ea7q/image/upload/v1637601106/ROTA/5.png" class="mx-auto my-6 w-[800px] h-[450px]" style="object-fit: cover;">
       </div>
       <div class="grid container gap-y-10 font-sans pb-9 mb-14">
         <div class="flex items-center gap-4 max-w-max font-audiowide">
@@ -122,11 +123,11 @@
             </div>
             <div class="grid gap-3">
               <h2 class="font-normal text-lg">¿En cuánto tiempo veré mejoras?</h2>
-              <p class="text-xs leading-relaxed">ROTA es una empresa que cree en el poder del mantenimiento, gracias a este rigor y compromiso, las mejoras son muy rápidas y los resultados asombrosos.</p>
+              <p class="text-xs leading-relaxed fonts-sans">ROTA es una empresa que cree en el poder del mantenimiento, gracias a este rigor y compromiso, las mejoras son muy rápidas y los resultados asombrosos.</p>
             </div>
           </div>
         </div>
-        <div class="border w-80 h-full mr-auto"></div>
+        <img src="https://res.cloudinary.com/drwz8ea7q/image/upload/v1637601126/ROTA/6.png" class="w-80 h-full mr-auto">
       </div>
       <div class="grid container grid-cols-2 mt-32 mb-12">
         <div class="font-audiowide grid gap-7">
