--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content="Proyecto Rota | CENTRO"><link rel="icon" type="image/png" href="/favicon.png"><title>Proyecto Rota | CENTRO</title><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet"><link rel="stylesheet" href="/style.css"></head>
+  <head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content="Proyecto Rota | CENTRO"><link rel="icon" type="image/png" href="/favicon.png"><title>Proyecto Rota | CENTRO</title><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet"><link rel="stylesheet" href="style.css"></head>
   <body>
     <div class="layout">
       <div class="bg-[color:var(--clr-primary)] text-white h-hero">
